# micro-aevol2

./: .gitignore  README.md
doc/: advisor.md  kokkos.md
src/: compilation.ipynb  trace.csv
src/aevols/aevol_0/: CMakeLists.txt  Dna.cpp
src/aevols/aevol_0/stats/: stats.csv
src/aevols/aevol_1/: CMakeLists.txt  Dna.cpp  Dna.h  ExpManager.cpp
src/aevols/aevol_1/stats/: stats.csv
src/aevols/aevol_2/: Dna.cpp  ExpManager.cpp
src/aevols/aevol_2/stats/: stats.csv
src/aevols/aevol_3/: CMakeLists.txt  Dna.cpp  ExpManager.cpp  ExpManager.h  Organism.cpp  aevol_constants.h  main.cpp
src/aevols/aevol_3/stats/: stats.csv
src/aevols/aevol_4/: Dna.cpp  Dna.h  ExpManager.cpp  ExpManager.h  Organism.cpp  Organism.h  main.cpp
src/aevols/aevol_4/stats/: stats.csv
src/aevols/aevol_5/: Dna.h  ExpManager.cpp  ExpManager.h  Organism.cpp
src/aevols/aevol_5/stats/: stats.csv
src/aevols/aevol_6/: CMakeLists.txt  Dna.cpp  ExpManager.cpp  ExpManager.h  Organism.cpp  Organism.h  Stats.cpp  Stats.h  main.cpp
src/aevols/aevol_6/stats/: stats.csv
src/aevols/aevol_kokkos_gpu_broken/: ExpManager.cpp
src/aevols/aevol_kokkos_simple_gpu_broken/: Timetracer.h
src/aevols/aevol_kokkos_simple_gpu_broken/stats/: stats.csv
src/backup/: backup_1000.zae
stats/: stats_simd_best.csv  stats_simd_mean.csv
